
<resources>
    <string name="app_name">Menu Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Menu Cafe</string>
    <string name="choose_a_dessert">Silakan dipilih</string>
    <string name="donuts">Harga Rp 10.000</string>
    <string name="ice_cream_sandwiches">Harga Rp 10.000</string>
    <string name="froyo">Harga Rp 10.000</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
</resources>
